# in-house-speech-to-text-solution

./: .gitignore  DockerFile.process_svc  Dockerfile.upload_api  README.md  docker-compose.yml  get_minio_keys.sh  load_upload_file.sh  process_file.py  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: unitests.yml
app/: TranscriptAPI.py  TranscriptAPISmall.py  upload_file.py
app/api/v1/routes/: upload.py
app/resources/: Config.py  CustomLogger.py  RedisFileProcessor.py  TransferFile.py
kube/: README.md  process_queue-deployment.yaml  upload_api-deployment.yaml  upload_api-service.yaml
kube/HELM-minio/: helm-minio-values.yaml  helm-minio.md
kube/HELM-redis/: helm-redis-values.yaml  helm-redis.md  service-doctolib_redis.yaml
tests/: harvard.txt  test_TranscriptAPI.py  test_TranscriptAPISmall.py  test_TransferFile.py
