[project]
name = "in-house-speech-to-text-solution"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.38.36",
    "fastapi>=0.115.12",
    "faster-whisper>=1.1.1",
    "openai-whisper>=20240930",
    "prometheus-client>=0.22.1",
    "pydantic>=2.11.6",
    "pydantic-settings>=2.9.1",
    "pytest>=8.4.0",
    "python-multipart>=0.0.20",
    "redis>=6.2.0",
    "torch==2.5.1",
    "uvicorn>=0.34.3",
    "whisperx==3.3.4",
]
